[package]
authors = [
  "Toru Ogawa <Hakuyume@users.noreply.github.com>",
  "Yuki Yamada <yukidmy@gmail.com>",
  "Makoto Shimazu <makoto.shimaz@gmail.com>",
  "Shunsuke Nakamura <S-Nakamur-a@users.noreply.github.com>",
]
description = "pwntools for Rust"
edition = "2018"
license = "Apache-2.0"
name = "pwntools"
repository = "https://github.com/makotoshimazu/pwntools-rs"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf-utilities = "=0.2.8"
num-derive = "0.3"
num-traits = "0.2"

# TODO: Once https://github.com/unicorn-engine/unicorn/pull/1447 is merged to trunk and published, use the official unicorn crate.
# unicorn = { git = "https://github.com/Hakuyume/unicorn", branch = "build-in-build-script-master" }
unicorn-engine = "2.0.0-rc3"

[dev-dependencies]
clap = "3.0.0-beta.5"
